--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -10,8 +10,10 @@
         android:id="@+id/textview_first"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="124dp"
         android:text="@string/hello_first_fragment"
+        android:textColor="#E91E63"
+        android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -20,22 +22,20 @@
         android:id="@+id/button_first_to_second"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="209dp"
-        android:layout_marginBottom="210dp"
+        android:layout_marginEnd="31dp"
         android:text="@string/to_second_fragment"
-        app:layout_constraintBottom_toBottomOf="@+id/button_first_to_third"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textview_first" />
+        app:layout_constraintBaseline_toBaselineOf="@+id/button_first_to_third"
+        app:layout_constraintEnd_toStartOf="@+id/button_first_to_third"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/button_first_to_third"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="145dp"
+        android:layout_marginBottom="320dp"
         android:text="@string/to_third_fragment"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/button_first_to_second" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
